WORK DONE ON DEC/13/2023

--- a/CSS/style-foraction_showcasejs.css
+++ b/CSS/style-foraction_showcasejs.css
@@ -1,13 +1,13 @@
 /* dragging styling begins */
 /* in conjunction with action.js file */
 
-#dragfly {
+#dragspider {
   z-index: 7;
   position: absolute;
   top: 25vh;
   left: 20vw;
 }
-#dragflyheader {
+#dragspiderheader {
   cursor: move;
   z-index: 10;
 }
